Se avanza en la creacion del footer

--- a/index.html
+++ b/index.html
@@ -4,10 +4,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./assets/css/styel.css">
   <title>Portafolio</title>
 </head>
 <body>
-  
+  <h1>Prueba</h1>
+  <!-- Declaracion del header de la pagina -->
+  <header>
+
+  </header>
+  <!-- Fin del header de la pagina -->
+  <!-- Comienzo del cuerpo de la pagina -->
+  <main>
+
+  </main>
+  <!-- Fin del cuerpo de la pagina -->
+
+  <!-- Comienzo del footer de la pagina -->
+  <footer>
+    <div class="container">
+      <div class="row">
+          <div class="col-md-4">
+              <span class="copyright">Copyright © Modulo 2 [2024] | Francisco Javier Araya Hernández</span>
+          </div>
+          <div class="col-md-4">
+              <ul class="list-inline social-buttons">
+                  <li><a href="https://www.linkedin.com/in/francisco-javier-araya-hernandez-95874b19/"><i class="bi bi-linkedin"></i></a>
+                  </li>
+                  <li><a href="https://www.youtube.com/miscelabros"><i class="bi bi-youtube"></i></a>
+                  </li>
+                  <li><a href="https://mail.google.com"><i class="bi bi-twitter"></i></a>
+                  </li>
+              </ul>
+          </div>
+          <div class="col-md-4">
+              <ul class="list-inline quicklinks">
+                  <li><a href="#">Privacy Policy</a>
+                  </li>
+                  <li><a href="#">Terms of Use</a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </div>
+  </footer>
+  <!-- Fin del footer de la pagina -->
+
 </body>
 </html>
