Se termina bosquejo de portafolio y se corrige el nombre de archivo a styles.css

--- a/index.html
+++ b/index.html
@@ -1,55 +1,177 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="./assets/css/styel.css">
-  <title>Portafolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portafolio del Estudiante</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-  <h1>Prueba</h1>
-  <!-- Declaracion del header de la pagina -->
-  <header>
+    <!-- Menú de Navegación sacado de bootstrap -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Fco Javier Araya Hernández</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#home">Inicio <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#skills">Conocimientos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#portfolio">Portafolio de Proyectos</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Redes de Contacto
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="https://www.linkedin.com/in/francisco-javier-araya-hernandez-95874b19/" target="_blank"><i class="fa fa-linkedin"></i>LinkedIn</a></li>
+                        <li><a class="dropdown-item" href="https://github.com/PakoAraya" target="_blank"><i class="fa fa-github"></i> GitHub</a></li>
+                        <li><a class="dropdown-item" href="https://gitlab.com/franarayah" target="_blank"><i class="fa fa-gitlab"></i> GitLab</a></li>
+                        <li><a class="dropdown-item" href="https://youtube.com/miscelabros" target="_blank"><i class="fa fa-youtube"></i> YouTube</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#" <i class="bi bi-envelope"></i>Contáctame</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-  </header>
-  <!-- Fin del header de la pagina -->
-  <!-- Comienzo del cuerpo de la pagina -->
-  <main>
+    <!-- Header -->
+    <header id="home" class="text-center py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>Bienvenido a Mi Portafolio</h1>
+                    <p>Soy Francisco Javier Araya Hernández. <br> Después de muchos años estoy retomando una de las áreas que más me apasionan que es la programación. <br> Actualmente me encuentro aprendiendo HTML, CSS y Javascript junto con otras tecnologías y herramientas modernas con las que iré interactuando, generando propuestas y compartiéndolas aquí.
+                      <br>Te comparto un poco de mi.</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="./assets/img/yo/IMG_3082.JPG" alt="Foto de Perfil" class="img-fluid rounded-circle">
+                </div>
+            </div>
+        </div>
+    </header>
 
-  </main>
-  <!-- Fin del cuerpo de la pagina -->
+    <!-- Conocimientos -->
+    <section id="skills" class="py-5">
+        <div class="container">
+            <h2 class="text-center">Conocimientos</h2>
+            <div class="row text-center">
+                <div class="col-md-3 mb-4">
+                    <a href="#" class="btn btn-outline-light d-block">
+                        <i class="fab fa-html5 fa-3x"></i>
+                        <p>HTML5</p>
+                    </a>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <a href="#" class="btn btn-outline-light d-block">
+                        <i class="fab fa-css3-alt fa-3x"></i>
+                        <p>CSS3</p>
+                    </a>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <a href="#" class="btn btn-outline-light d-block">
+                        <i class="fab fa-js fa-3x"></i>
+                        <p>JavaScript</p>
+                    </a>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <a href="#" class="btn btn-outline-light d-block">
+                        <i class="fab fa-git fa-3x"></i>
+                        <p>Git</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 
-  <!-- Comienzo del footer de la pagina -->
-  <footer>
-    <div class="container">
-      <div class="row">
-          <div class="col-md-4">
-              <span class="copyright">Copyright © Modulo 2 [2024] | Francisco Javier Araya Hernández</span>
-          </div>
-          <div class="col-md-4">
-              <ul class="list-inline social-buttons">
-                  <li><a href="https://www.linkedin.com/in/francisco-javier-araya-hernandez-95874b19/"><i class="bi bi-linkedin"></i></a>
-                  </li>
-                  <li><a href="https://www.youtube.com/miscelabros"><i class="bi bi-youtube"></i></a>
-                  </li>
-                  <li><a href="https://mail.google.com"><i class="bi bi-twitter"></i></a>
-                  </li>
-              </ul>
-          </div>
-          <div class="col-md-4">
-              <ul class="list-inline quicklinks">
-                  <li><a href="#">Privacy Policy</a>
-                  </li>
-                  <li><a href="#">Terms of Use</a>
-                  </li>
-              </ul>
-          </div>
-      </div>
-  </div>
-  </footer>
-  <!-- Fin del footer de la pagina -->
+    <!-- Portafolio de Proyectos -->
+    <section id="portfolio" class="py-5">
+        <div class="container">
+            <h2 class="text-center">Portafolio de Proyectos</h2>
+            <div class="row">
+                <!-- Card 1 -->
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="proyecto1.jpg" class="card-img-top" alt="Proyecto 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Proyecto 1</h5>
+                            <p class="card-text">Descripción breve del proyecto 1.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 2 -->
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="proyecto2.jpg" class="card-img-top" alt="Proyecto 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Proyecto 2</h5>
+                            <p class="card-text">Descripción breve del proyecto 2.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 3 -->
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="proyecto3.jpg" class="card-img-top" alt="Proyecto 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Proyecto 3</h5>
+                            <p class="card-text">Descripción breve del proyecto 3.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Agregar más cards según sea necesario -->
+            </div>
+        </div>
+    </section>
 
+    <!-- Formulario de Contacto -->
+    <section id="contact" class="py-5">
+        <div class="container">
+            <h2 class="text-center">Formulario de Contacto</h2>
+            <form>
+                <div class="form-group">
+                    <label for="name">Nombre</label>
+                    <input type="text" class="form-control" id="name" placeholder="Tu nombre">
+                </div>
+                <div class="form-group">
+                    <label for="email">Dirección de Correo Electrónico</label>
+                    <input type="email" class="form-control" id="email" placeholder="Tu correo electrónico">
+                </div>
+                <div class="form-group">
+                    <label for="subject">Asunto</label>
+                    <input type="text" class="form-control" id="subject" placeholder="Asunto">
+                </div>
+                <div class="form-group">
+                    <label for="message">Mensaje</label>
+                    <textarea class="form-control" id="message" rows="4" placeholder="Tu mensaje"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2024 Mi Portafolio. Todos los derechos reservados.</p>
+        <div class="social-icons">
+            <a href="https://www.linkedin.com/in/francisco-javier-araya-hernandez-95874b19/" target="_blank" class="text-white mx-2"><i class="fab fa-linkedin fa-2x"></i></a>
+            <a href="https://github.com/PakoAraya" target="_blank" class="text-white mx-2"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://gitlab.com/franarayah" target="_blank" class="text-white mx-2"><i class="fab fa-gitlab fa-2x"></i></a>
+            <a href="https://youtube.com/miscelabros" target="_blank" class="text-white mx-2"><i class="fab fa-youtube fa-2x"></i></a>
+        </div>
+    </footer>
+
+    <!-- Scripts de Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
