--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Consultorias TI</h5>
                             <p class="card-text">Durante buena parte de mi vida, estuve trabajando en el sector de las consultorías a empresas de diversos nichos, apoyándolas en la mejora y optimización de procesos con tecnologías BPM y mucha ingeniería, lo que me llevó en un momento de mi vida al realizar docencia.</p>
-                            <a href="https://www.youtube.com/miscelabros" class="stretched-link"></a>
+                            <a href="https://www.bpmn.org" target="_blank" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Desarrollador</h5>
                             <p class="card-text">En la actualidad me encuentro capacitándome para volver a ingresar a la industria del desarrollo del software, pues estuve mucho tiempo en la parte de gestión, proyectos e ingeniería, pero la programación es lo que más me gusta desarrollar.</p>
-                            <a href="https://github.com/PakoAraya" class="stretched-link"></a>
+                            <a href="https://github.com/PakoAraya" target="_blank" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                         <div class="card-body">
                             <h5 class="card-title">MiscelaBros</h5>
                             <p class="card-text">Partimos con mi hermano como youtubers como un hobbie dentro de mis espacios libres, y lo que partió siendo un pasatiempo, de a poco se formalizó. <br> En la actualidad cuentamos con el apoyo de grandes marcas de tecnologías que nos apoyan en creación de contenido.</p>
-                            <a href="https://www.youtube.com/miscelabros" class="stretched-link"></a>
+                            <a href="https://www.youtube.com/miscelabros" target="_blank" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
@@ -139,14 +139,14 @@
     <section id="contacto" class="py-5">
         <div class="container">
             <h2 class="text-center">Formulario de Contacto</h2>
-            <form>
+            <form action="#" method="get" >
                 <div class="form-group">
-                    <label for="name">Nombre</label>
+                    <label for="name">Nombre Completo</label>
                     <input type="text" class="form-control" id="name" placeholder="Tu nombre" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Dirección de Correo Electrónico</label>
-                    <input type="email" class="form-control" id="email" placeholder="Tu correo electrónico" required>
+                    <input type="email" class="form-control" id="email" placeholder="Tu correo electrónico" >
                 </div>
                 <div class="form-group">
                     <label for="subject">Asunto</label>
@@ -156,7 +156,11 @@
                     <label for="message">Mensaje</label>
                     <textarea class="form-control" id="message" rows="4" placeholder="Tu mensaje" required></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <div class="form-group">
+                  <input type="checkbox" id="checkbox" onclick="soyHumano()" required>
+                  <p id="parrafo-soyHumano">Reconozco que soy un ser humano y no un bot.</p>
+              </div>
+                <button type="submit" class="btn btn-primary" onclick="validarCorreo(document.getElementById('email').value)">Enviar</button>
             </form>
         </div>
     </section>
@@ -176,5 +180,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
